--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     // ------------------------------------------------------
     function speakRobotMessage() {
       // Texto a ser falado
-      const text = "Hello there! I'm your friendly English helper. Let's learn together!";
+      const text = "Hello there!, I'm Samuel, your friendly English helper! Click that bouncy button to discover the best way to learn English, or log in to start studying. Let's learn together!";
       const utterance = new SpeechSynthesisUtterance(text);
 
       // Se encontramos voz em inglês, aplica
