--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     // ------------------------------------------------------
     function speakRobotMessage() {
       // Mensagem
-      const text = "Hello! I'm your friendly English helper. Let's learn together!";
+      const text = "Hi, I'm Samuel, your friendly English helper! Click that bouncy button to discover the best way to learn English, or log in to start studying! Let's learn together!";
       const utterance = new SpeechSynthesisUtterance(text);
 
       // Se achou voz em inglês, aplica
