--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="CSS/styles.css"/>
   <!-- Manifesto para PWA -->
   <link rel="manifest" href="manifest.json"/>
+
   <!-- Firebase Libraries -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
@@ -176,7 +177,6 @@
       transform: scale(1.05);
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     }
-
   </style>
 </head>
 
@@ -212,6 +212,16 @@
     </div>
 
     <main>
+      <!-- 1) TÍTULO HANNAHGAME E IFRAME ANTES DE "Choose your level" -->
+      <h2>HannahGame</h2>
+      <iframe 
+        src="game.html" 
+        width="100%" 
+        height="800px" 
+        style="border:1px solid #ccc">
+      </iframe>
+      <!-- Fim do iframe -->
+
       <h2>Choose your level</h2>
       <div class="levels">
         <a href="Level0/index.html" class="level-button level0" id="Level0"></a>
@@ -299,12 +309,12 @@
       const loginLink = document.getElementById("loginLink");
       const userDropdown = document.getElementById("userDropdown");
 
-      const roboContainer      = document.getElementById("roboContainer");
+      const roboContainer       = document.getElementById("roboContainer");
       const invitationContainer = document.getElementById("invitationContainer");
 
       if (user) {
         // Usuário logado => esconde tudo
-        roboContainer.style.display      = "none";
+        roboContainer.style.display       = "none";
         invitationContainer.style.display = "none";
 
         // Carrega dados do user no BD
@@ -379,7 +389,7 @@
         });
       } else {
         // Não está logado => exibe robô + convite
-        roboContainer.style.display      = "flex";
+        roboContainer.style.display       = "flex";
         invitationContainer.style.display = "flex";
 
         loginLink.setAttribute("href", "Formulario/login.html");
