--- a/game.html
+++ b/game.html
@@ -162,7 +162,7 @@
   
   <!-- Seção Esquerda: Robot Samuel -->
   <div id="robot-section">
-    <img id="robot-image" src="../imagens/robo_estatico.png" alt="Robot Samuel">
+    <img id="robot-image" src="imagens/robo_estatico.png" alt="Robot Samuel">
     <div id="robot-balloon"></div>
   </div>
 
@@ -245,7 +245,7 @@
     // Ao iniciar a fala...
     utterance.onstart = () => {
       // Trocar imagem do robô para o GIF
-      robotImage.src = "../imagens/robo_fala.gif";
+      robotImage.src = "imagens/robo_fala.gif";
       // Exibir balão com o texto
       robotBalloon.textContent = text;
       robotBalloon.style.display = "block";
@@ -254,7 +254,7 @@
     // Ao terminar a fala...
     utterance.onend = () => {
       // Volta pra imagem estática
-      robotImage.src = "../imagens/robo_estatico.png";
+      robotImage.src = "imagens/robo_estatico.png";
       // Esconde o balão depois de um pequeno delay
       setTimeout(() => {
         robotBalloon.style.display = "none";
